--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,9 @@
          <input type="number" name="secRainbow" value="5">
          <input type="submit" name="submit" value="Rainbow">
        </form>
+      <form method="POST">
+         <input type="submit" name="picture" value="Take Picture">
+      </form>
+       <p><img src="images/test.jpg" ></p>
    </body>
 </html>
