Fix form submition and image serving

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
          <input type="submit" name="submit" value="Rainbow">
        </form>
       <form method="POST">
-         <input type="submit" name="picture" value="Take Picture">
+         <input type="submit" name="submit" value="Take Picture">
       </form>
        <p><img src="images/test.jpg" ></p>
    </body>
