--- a/templates/index.html
+++ b/templates/index.html
@@ -12,25 +12,27 @@
     <!-- <script src="//code.jquery.com/jquery.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    
-    <h1>Hello, World!</h1>
-    <h2>The date and time on the server is: {{ time }}</h2>
-    <h2>Button pressed:  {{ door }}</h2>
-    <form method="POST">
-      <p>Start task:</p>
-      <input type="number" name="secRainbow" value="5">
-      <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
-    </form>
-    <form method="POST">
-      <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
-    </form>
-    <div><img src="images/test.jpg" ></div>
-    <div class="form-group">
-      <form method="POST">
+    <form method="post">
+      <h1>Hello, World!</h1>
+      <h2>The date and time on the server is: {{ time }}</h2>
+      <h2>Button pressed:  {{ door }}</h2>
+      <div class="form-group">
+        <p>Start task:</p>
+        <input type="number" name="secRainbow" value="5">
+        <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
+      </div>
+      <div class="form-group">
+          <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
+          <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+      </div>
+      <div class="form-group">
         <label for="Exec">Exec Python</label>
-        <textarea class="form-control" name="exec" id="exec" rows="5"></textarea>
+        <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
         <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
-      </form>
-    </div>
-</body>
+        <div>
+          <label for="ExecOutput">{{ execoutput }}</label>
+        </div>
+      </div>
+    </form>
+  </body>
 </html>
