--- a/templates/index.html
+++ b/templates/index.html
@@ -1,38 +1,23 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Little Free Library Monitor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  </head>
-  <body>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- <script src="//code.jquery.com/jquery.js"></script> -->
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <form method="post">
-      <h1>Hello, World!</h1>
-      <h2>The date and time on the server is: {{ time }}</h2>
-      <h2>Button pressed:  {{ door }}</h2>
-      <div class="form-group">
-        <p>Start task:</p>
-        <input type="number" name="secRainbow" value="5">
-        <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
-      </div>
-      <div class="form-group">
-          <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
-          <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
-      </div>
-      <div class="form-group">
-        <label for="Exec">Exec Python</label>
-        <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
-        <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
-        <div>
-          <label for="ExecOutput">{{ execoutput }}</label>
-        </div>
-      </div>
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block page_content %}
+  <h2>The date and time on the server is: {{ time }}</h2>
+  <h2>Button pressed:  {{ door }}</h2>
+  <div class="form-group">
+    <p>Start task:</p>
+    <input type="number" name="secRainbow" value="5">
+    <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
+  </div>
+  <div class="form-group">
+      <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
+      <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+  </div>
+  <div class="form-group">
+    <label for="Exec">Exec Python</label>
+    <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
+    <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
+    <div>
+      <label for="ExecOutput">{{ execoutput }}</label>
+    </div>
+  </div>
+{% endblock %}
