--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,25 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-  <h2>The date and time on the server is: {{ time }}</h2>
-  <h2>Button pressed:  {{ door }}</h2>
-  <div class="form-group">
-    <p>Start task:</p>
-    <input type="number" name="secRainbow" value="5">
-    <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
-  </div>
-  <div class="form-group">
-      <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
-      <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
-  </div>
-  <div class="form-group">
-    <label for="Exec">Exec Python</label>
-    <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
-    <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
-    <div>
-      <label for="ExecOutput">{{ execoutput }}</label>
+  <div class="container">
+    <h2>The date and time on the server is: {{ time }}</h2>
+    <h2>Button pressed:  {{ door }}</h2>
+    <div class="form-group">
+      <p>Start task:</p>
+      <input type="number" name="secRainbow" value="5">
+      <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
     </div>
-  </div>
+    <div class="form-group">
+        <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
+        <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+    </div>
+    <div class="form-group">
+      <label for="Exec">Exec Python</label>
+      <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
+      <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
+      <div>
+        <label for="ExecOutput">{{ execoutput }}</label>
+      </div>
+    </div>
+  </div
 {% endblock %}
