--- a/templates/imagelist.html
+++ b/templates/imagelist.html
@@ -11,7 +11,7 @@
     <div class="row">
       {% for image in imagegroup %}
       <div class="col-md-4">
-        <p>{{ image }}</p>
+        <p><button type="button" class="btn btn-link" data-toggle="modal" data-target="#imageModal" data-image="{{ image }}">{{ image }}</button></p>
         <p><img src="images/{{ image }}" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt=""></p>
       </div>
       {% endfor %}
@@ -19,4 +19,32 @@
     {% endfor %}
     {{ pagination.links }}
   </div>
+
+  <div class="modal fade bd-example-modal-lg" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><img id="imageName" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    $('#imageModal').on('show.bs.modal', function (event) {
+      var button = $(event.relatedTarget) // Button that triggered the modal
+      var image = button.data('image') // Extract info from data-* attributes
+      // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+      // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+      var modal = $(this)
+      modal.find('.modal-title').text(image)
+      modal.find('.modal-body img').attr("src", "images/" + image)
+    })
+  </script>
 {% endblock %}
