Add authenticaiton Clean up Bootstrap/CSS to get colors more consistent

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,16 @@
     <div class="form-group">
       <p>Start task:</p>
       <input type="number" name="secRainbow" value="5">
-      <button type="submit" class="btn btn-primary" value="Rainbow" name="submit">Rainbow</button>
+      <button type="submit" class="btn btn-dark" value="Rainbow" name="submit">Rainbow</button>
     </div>
     <div class="form-group">
-        <button type="submit" name="submit" class="btn btn-primary" value="Take Picture">Take Picture</button>
+        <button type="submit" name="submit" class="btn btn-dark" value="Take Picture">Take Picture</button>
         <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
     </div>
     <div class="form-group">
       <label for="Exec">Exec Python</label>
       <textarea class="form-control" name="exec" id="exec" rows="5">{{ execcmd }}</textarea>
-      <button type="submit" name="submit" class="btn btn-primary" value="Exec Python">Exec Python</button>
+      <button type="submit" name="submit" class="btn btn-dark" value="Exec Python">Exec Python</button>
       <div>
         <label for="ExecOutput">{{ execoutput }}</label>
       </div>
