--- a/static/style.css
+++ b/static/style.css
@@ -54,9 +54,27 @@ body {
     font-size: 12px;
 }
 .pagination-page-info b {
-    color: black;
-    background: #6aa6ed;
+    color: #fff;
+    background: #343a40;
     padding-left: 2px;
     padding: .1em .25em;
     font-size: 150%;
+}
+
+.custom-control-input:checked~.custom-control-label::before{
+  background-color:#343a40;
+  border-color: #343a40;
+}
+
+.page-item.active .page-link {
+  background-color:#343a40;
+  border-color: #343a40;
+}
+
+.page-link {
+  color: #343a40
+}
+
+.btn-link {
+  color: #343a40
 }
