--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,11 @@
             <a class="nav-link" href="{{ url_for('imagelist') }}">Images</a>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+        </ul>
       </div>
     </nav>
     {% endblock %}
