Add battery voltage display and pin configuration

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
     <h2>The date and time on the server is: {{ time }}</h2>
     <h2>Button pressed:  {{ door }}</h2>
     <div class="form-group">
+      <label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label>
+    </div>
+    <div class="form-group">
       <p>Start task:</p>
       <input type="number" name="secRainbow" value="5">
       <button type="submit" class="btn btn-dark" value="Rainbow" name="submit">Rainbow</button>
