--- a/templates/voltagegraph.html
+++ b/templates/voltagegraph.html
@@ -5,9 +5,11 @@
 <script src="static/graph.js"></script>
 <script type=text/javascript>
   $(document).ready(function () {
+    var xmlpath = getUrlParameter('xmlpath');
+    
     $.ajax({
       type: "GET",
-      url: "xml/voltage24h.xml",
+      url: ( xmlpath === undefined ? 'xml/voltage3h.xml' : xmlpath),
       dataType: "xml",
       success: function(xml) {
         var series = []
@@ -45,5 +47,10 @@
 </script>
 <div class="container">
   <div id="graph" style="width:100%; height:400px;"></div>  
-</div>"
+  <ul class="nav justify-content-center">
+    {% for xmlpath in xmlpaths %}
+      <li class="nav-link"><a href="{{ url_for('voltage') }}?xmlpath={{ xmlpath }}">Last 3h</a></li>
+    {% endfor %}
+  </ul>
+</div>
 {% endblock %}
