--- a/templates/voltagegraph.html
+++ b/templates/voltagegraph.html
@@ -49,7 +49,7 @@
   <div id="graph" style="width:100%; height:400px;"></div>  
   <ul class="nav justify-content-center">
     {% for xmlpath in xmlpaths %}
-      <li class="nav-link"><a href="{{ url_for('voltage') }}?xmlpath={{ xmlpath }}">Last 3h</a></li>
+      <li class="nav-link"><a href="{{ url_for('voltage') }}?xmlpath={{ xmlpath.quotepath }}">Last {{ "{}{}".format(xmlpath.dateCount, xmlpath.shortDate) }}</a></li>
     {% endfor %}
   </ul>
 </div>
