Add panel voltage to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <h2>The date and time on the server is: {{ time }}</h2>
     <h2>Button pressed:  {{ door }}</h2>
     <div class="form-group">
-      <label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label>
+      <p><label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label></p>
+      <p><label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label></p>
     </div>
     <div class="form-group">
       <p>Start task:</p>
