--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <h2>Button pressed:  {{ door }}</h2>
     <div class="form-group">
       <p><label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label></p>
-      <p><label for="BatteryVoltage">Battery Voltage: {{ batteryVoltage }}</label></p>
+      <p><label for="BatteryVoltage">Panel Voltage: {{ panelVoltage }}</label></p>
     </div>
     <div class="form-group">
       <p>Start task:</p>
