--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,9 @@
     </div>
     <div class="form-group">
       <p>Start task:</p>
-      <input type="number" name="secRainbow" value="5">
+      <input type="number" name="secRainbow" value="{{ secRainbow }}">
       <button type="submit" class="btn btn-dark" value="Rainbow" name="submit">Rainbow</button>
+      <button type="submit" class="btn btn-dark" value="ColorRotate" name="submit">Color Rotate</button>
     </div>
     <div class="form-group">
         <button type="submit" name="submit" class="btn btn-dark" value="Take Picture">Take Picture</button>
