Refactor and fix getURLParameter Switch to minified highcharts Death to whitespace

--- a/templates/voltagegraph.html
+++ b/templates/voltagegraph.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="static/graph.js"></script>
 <script type=text/javascript>
   $(document).ready(function () {
