Add system design and parts list to README Close a div properly

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,5 +18,5 @@
         <button type="submit" name="submit" class="btn btn-dark" value="Take Picture">Take Picture</button>
         <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
     </div>
-  </div
+  </div>
 {% endblock %}
