Add initial music player interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,11 @@
       <button type="submit" class="btn btn-dark" value="ColorRotate" name="submit">Color Rotate</button>
     </div>
     <div class="form-group">
+      <p>Start song:</p>
+      <button type="submit" class="btn btn-dark" value="StartSong" name="submit">Start Song</button>
+      <button type="submit" class="btn btn-dark" value="StopSong" name="submit">Stop Song</button>
+    </div>
+    <div class="form-group">
         <button type="submit" name="submit" class="btn btn-dark" value="Take Picture">Take Picture</button>
         <img src="images/test.jpg" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
     </div>
