--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
             <a class="nav-link" href="{{ url_for('imagelist') }}">Images</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('musicPlayer') }}">Music</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ url_for('voltage') }}">Voltage</a>
           </li>
         </ul>
@@ -50,7 +53,7 @@
     {% endblock %}
     <main role="main">
     
-      <form method="post">
+      <form method="post" enctype="multipart/form-data">
         {% block page_content %}{% endblock %}
       </form>
 
