--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -16,7 +16,13 @@
     <div class="form-group">
       <div class="row">
         {% for musicFile in musicFiles %}
-          <button type="submit" class="btn btn-link" value="{{musicFile}}" name="playMusic">{{ musicFile }}</button>
+          <div class="col-md-4">
+            <button type="submit" class="btn btn-link" value="{{musicFile}}" name="playMusic">{{ musicFile }}</button>
+          </div>
+          {% if loop.index > 0 and loop.index % 4 == 0 %}
+      </div>
+      <div class="row">
+          {% endif %}
         {% endfor %}
       </div>
     </div>
