Update thumbnail image path to leverage nginx image resize setup

--- a/templates/imagelist.html
+++ b/templates/imagelist.html
@@ -12,7 +12,7 @@
       {% for image in imagegroup %}
       <div class="col-md-4">
         <p><button type="button" class="btn btn-link" data-toggle="modal" data-target="#imageModal" data-image="{{ image }}">{{ image }}</button></p>
-        <p><img src="images/{{ image }}" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="" data-toggle="modal" data-target="#imageModal" data-image="{{ image }}"></p>
+        <p><img src="images/350/{{ image }}" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="" data-toggle="modal" data-target="#imageModal" data-image="{{ image }}"></p>
       </div>
       {% endfor %}
     </div>
