--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -27,11 +27,13 @@
       <button type="submit" class="btn btn-dark" value="stopMusic" name="submit">Stop Music</button>
     </div>
     <div class="form-group">
-      <h2>Config</h2>
-      <select class="form-control" name="configName" value={{ configName }}>
-        <option>defaults</option>
-        <option>halloween</option>
-      </select>
+      <div class="col-md-4">
+        Show Config:
+        <select class="form-control" name="configName">
+          <option>defaults</option>
+          <option>halloween</option>
+        </select>
+      </div>
     </div>
     <div class="form-group">
       <div class="row">
