Add forth_of_july config

--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -32,6 +32,7 @@
         <select class="form-control" name="configName">
           <option>defaults</option>
           <option>halloween</option>
+          <option>forth_of_july</option>
         </select>
       </div>
     </div>
