Save the playlist to file and load on startup Add jquery-ui-touch-punch.js to try support touch

--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -8,6 +8,7 @@
 
 {% block script %}
     <script src="/static/music.js"></script>
+    <script src="/static/jquery-ui-touch-punch.js"></script>
 {% endblock %}
 
 {% block page_content %}
