--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -15,11 +15,11 @@
   <div class="container">
     <div class="form-group">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <input type="range" min="0" max="100" name="intVolume" value={{ intVolume }} />
           <button type="submit" class="btn btn-dark" value="SetVolume" name="submit">Set Volume</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2>Playing song:</h2>
           <h5 id="playingSong"></h5>
         </div>
@@ -33,18 +33,29 @@
       <button type="submit" class="btn btn-dark" value="stopMusic" name="submit">Stop Music</button>
     </div>
     <div class="form-group">
-      <div class="col-md-4">
-        Show Config:
-        <select class="form-control" name="configName">
-          <option>defaults</option>
-          <option>halloween</option>
-          <option>forth_of_july</option>
-        </select>
+      <div class="row">
+        <div class="col-md-12">
+          LED Config:<select class="form-control" name="configName">
+            <option>defaults</option>
+            <option>halloween</option>
+            <option>forth_of_july</option>
+          </select>
+        </div>
       </div>
     </div>
     <div class="form-group">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-12">
+          <button type="submit" class="btn btn-dark" id="startPlayList" name="startPlayList">Start Playlist</button>
+          <button type="submit" class="btn btn-dark" id="stopPlayList" name="stopPlayList">Stop Playlist</button>
+          <button type="submit" class="btn btn-dark" id="updatePlayList" name="updatePlayList">Update Playlist</button>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="row">
+        <div class="col-md-6">
+          <h4>Song List:</h4>
           <ul class="list-group songList connected" id="songList" name="songList">
             {% for musicFile in musicFiles %}
             <li class="list-group-item ui-draggable ui-draggable-handle">
@@ -53,7 +64,8 @@
             {% endfor %}
           </ul>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
+          <h4>Play List:</h4>
           <ul class="list-group playList connected" id="playList" name="playList">
             {% for item in playList %}
             <li class="list-group-item ui-draggable ui-draggable-handle">
@@ -61,9 +73,6 @@
             </li>
             {% endfor %}
           </ul>
-        </div>
-        <div class="col-md-4">
-          <button type="submit" class="btn btn-dark" id="updatePlayList" name="updatePlayList">Update Playlist</button>
         </div>
       </div>
       <div class="row">
