--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -69,7 +69,7 @@
           <ul class="list-group playList connected" id="playList" name="playList">
             {% for item in playList %}
             <li class="list-group-item ui-draggable ui-draggable-handle">
-              <button type="submit" class="btn btn-link" draggable="true" value="{{item}}" name="playMusic">{{ item }}</button>
+              <button type="submit" class="btn btn-link ui-draggable-handle" draggable="true" value="{{item}}" name="playMusic">{{ item }}</button>
             </li>
             {% endfor %}
           </ul>
