--- a/templates/musicPlayer.html
+++ b/templates/musicPlayer.html
@@ -58,8 +58,13 @@
           <h4>Song List:</h4>
           <ul class="list-group songList connected" id="songList" name="songList">
             {% for musicFile in musicFiles %}
-            <li class="list-group-item ui-draggable ui-draggable-handle">
-              <button type="submit" class="btn btn-link ui-draggable-handle" draggable="true" value="{{musicFile.name}}" name="playMusic">{{ "{} - {}".format(musicFile.artist, musicFile.name) }}</button>
+            <li class="list-group-item ui-draggable d-flex justify-content-start align-items-center">
+              <span class="ui-draggable-handle">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-grip-horizontal" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg>
+              </span>
+              <button type="submit" class="btn btn-link text-nowrap text-truncate" draggable="true" value="{{musicFile.name}}" name="playMusic">{{ "{} - {}".format(musicFile.name, musicFile.artist) }}</button>
             </li>
             {% endfor %}
           </ul>
@@ -68,8 +73,13 @@
           <h4>Play List:</h4>
           <ul class="list-group playList connected" id="playList" name="playList">
             {% for item in playList %}
-            <li class="list-group-item ui-draggable ui-draggable-handle">
-              <button type="submit" class="btn btn-link ui-draggable-handle" draggable="true" value="{{item.name}}" name="playMusic">{{ "{} - {}".format(item.artist, item.name) }}</button>
+            <li class="list-group-item ui-draggable d-flex justify-content-start align-items-center">
+              <span class="ui-draggable-handle">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-grip-horizontal" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M7 2a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM7 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm-3 3a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+                </svg>
+              </span>
+              <button type="submit" class="btn btn-link text-nowrap text-truncate" draggable="true" value="{{item.name}}" name="playMusic">{{ "{} - {}".format(item.name, item.artist) }}</button>
             </li>
             {% endfor %}
           </ul>
